crates/apollo-compiler/test_data/diagnostics/0003_anonymous_and_named_operation.txt
Error: expected identifier
   ╭─[0003_anonymous_and_named_operation.graphql:1:1]
   │
 1 │ ╭─▶ query {
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── provide a name for this definition
   │     
   │     Help: GraphQL only allows a short-hand form for defining query operations when only that one operation exists in the document.
───╯
Error: the required argument `name` is not provided
    ╭─[0003_anonymous_and_named_operation.graphql:6:3]
    │
  6 │ ╭─▶   addPet {
    ┆ ┆   
  8 │ ├─▶   }
    │ │         
    │ ╰───────── missing value for argument `name`
    │ 
 16 │       addPet (name: String!, petType: PetType): Result!
    │               ──────┬──────  
    │                     ╰──────── argument defined here
────╯

